# g4tube

./: CMakeLists.txt  README.md  h1_20211225-18:47:55_20211225-19:32:38_h1_Energy.csv  run.mac  spectre_tg.cc  vis.mac  xtube.cpp
CoreCT/: .cproject  .project  CMakeLists.txt  corect.cc  corect.ggo  exec.sh  init.mac  restart.sh  run.mac  runct.mac  runct.sh  update.sh  visGL.mac  visQt.mac
CoreCT/INPUT/: Densities.ml2g4  Indexes.ml2g4  Voxels.ml2g4
CoreCT/cmake/: FindGengetopt.cmake  FindSQLite3.cmake
CoreCT/include/: CoreHolder.hh  DBManager.hh  Detector.hh  DetectorConstruction.hh  EKillerSensitiveDetector.hh  EventAction.hh  Hist.hh  HistManager.hh  MessagesHandler.hh  PhysicsList.hh  RunAction.hh  SensitiveDetector.hh  TargetsCalculator.hh  TargetsManager.hh  defines.hh
CoreCT/include/distributed/: DispatcherTransport.hh  Exception.hh  RemoteUtils.hh  UnitTransport.hh  constants.hh
CoreCT/include/distributed/channels/: Geant4CalcChannelsAggregator.hh  Geant4CalcDispatcherChannel.hh  Geant4CalcUnitChannel.hh  IChannel.hh  TemperatureDispatcherChannel.hh  TemperatureUnitChannel.hh
CoreCT/include/targets/CorePhantom/: CorePhantomDetectorConstruction.hh  CorePhantomHist.hh  CorePhantomParameterisation.hh  CorePhantomPhys.hh  CorePhantomPrimaryGeneratorAction.hh
CoreCT/include/targets/CoreVoxel/: CoreVoxel.hh  CoreVoxelDetectorConstruction.hh  CoreVoxelParameterisation.hh  CoreVoxelPrimaryGeneratorAction.hh  RoundHist.hh  RoundPrimaryGeneratorAction.hh
CoreCT/src/: CoreHolder.cc  DBManager.cc  Detector.cc  DetectorConstruction.cc  EKillerSensitiveDetector.cc  EventAction.cc  Hist.cc  HistManager.cc  MessagesHandler.cc  PhysicsList.cc  RunAction.cc  SensitiveDetector.cc  TargetsCalculator.cc  TargetsManager.cc
CoreCT/src/data/: W160Spectrum.txt
CoreCT/src/distributed/: DispatcherTransport.cc  RemoteUtils.cc  UnitTransport.cc
CoreCT/src/distributed/channels/: Geant4CalcChannelsAggregator.cc  Geant4CalcDispatcherChannel.cc  Geant4CalcUnitChannel.cc  TemperatureDispatcherChannel.cc  TemperatureUnitChannel.cc
CoreCT/src/targets/CorePhantom/: CorePhantomDetectorConstruction.cc  CorePhantomHist.cc  CorePhantomParameterisation.cc  CorePhantomPhys.cc  CorePhantomPrimaryGeneratorAction.cc
CoreCT/src/targets/CoreVoxel/: CoreVoxel.cc  CoreVoxelDetectorConstruction.cc  CoreVoxelParameterisation.cc  CoreVoxelPrimaryGeneratorAction.cc
include/: ActionInitialization.hh  Analysis.hh  Detector.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
src/: ActionInitialization.cpp  Detector.cpp  DetectorConstruction.cc  DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cpp  RunAction.cc  RunAction.cpp  SensitiveDetector.cpp
